--- a/main.ipynb
+++ b/main.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2828,7 +2828,7 @@
        "  'netIncome': '8235000000'}]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2843,7 +2843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -4892,7 +4892,7 @@
        "[58 rows x 29 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4902,13 +4902,13 @@
     "apple_annual_reports= pd.DataFrame(apple_annual_reports_json)\n",
     "apple_quarterly_reports = pd.DataFrame(apple_quarterly_reports_json)\n",
     "\n",
-    "#Tesal quarterly\n",
+    "#APPL quarterly\n",
     "apple_quarterly_reports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4923,7 +4923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4973,28 +4973,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       Open    High     Low   Close  Volume\n",
-      "date                                                       \n",
-      "2024-04-25 19:59:00  416.44  416.70  416.20  416.65  4374.0\n",
-      "2024-04-25 19:58:00  416.30  416.50  416.15  416.40  1682.0\n",
-      "2024-04-25 19:57:00  416.15  416.40  416.01  416.30  1978.0\n",
-      "2024-04-25 19:56:00  416.29  416.30  415.92  416.13  1284.0\n",
-      "2024-04-25 19:55:00  415.75  416.20  415.60  416.09  1721.0\n",
-      "...                     ...     ...     ...     ...     ...\n",
-      "2024-04-04 04:04:00  422.14  422.14  422.14  422.14     2.0\n",
-      "2024-04-04 04:03:00  422.14  422.60  422.14  422.17   297.0\n",
-      "2024-04-04 04:02:00  422.86  422.86  422.14  422.53   736.0\n",
-      "2024-04-04 04:01:00  422.89  422.89  422.74  422.74    85.0\n",
-      "2024-04-04 04:00:00  424.26  424.26  422.10  422.56   549.0\n",
+      "                        Open    High     Low   Close  Volume\n",
+      "date                                                        \n",
+      "2024-04-25 19:59:00  169.680  169.74  169.66  169.66  2411.0\n",
+      "2024-04-25 19:58:00  169.660  169.75  169.66  169.68  1254.0\n",
+      "2024-04-25 19:57:00  169.660  169.66  169.63  169.66  4884.0\n",
+      "2024-04-25 19:56:00  169.779  169.78  169.63  169.66  3538.0\n",
+      "2024-04-25 19:55:00  169.850  169.88  169.76  169.78  3155.0\n",
+      "...                      ...     ...     ...     ...     ...\n",
+      "2024-04-04 04:04:00  170.050  170.12  170.05  170.12   436.0\n",
+      "2024-04-04 04:03:00  169.980  170.07  169.93  170.05   679.0\n",
+      "2024-04-04 04:02:00  170.100  170.10  169.97  170.05  1537.0\n",
+      "2024-04-04 04:01:00  170.000  170.09  169.87  170.02  2635.0\n",
+      "2024-04-04 04:00:00  170.370  170.37  169.85  170.15   571.0\n",
       "\n",
-      "[15138 rows x 5 columns]\n"
+      "[15306 rows x 5 columns]\n"
      ]
     }
    ],
@@ -5009,7 +5009,7 @@
     "#Get Data\n",
     "ts = TimeSeries(key=api_key, output_format='pandas')\n",
     "\n",
-    "stockname = 'MSFT'\n",
+    "stockname = 'AAPL'\n",
     "period = 5\n",
     "freqfix = '5min'\n",
     "datainter = '5m'\n",
@@ -5036,6 +5036,17 @@
     "    #stockpricefull.index.to_datetime\n",
     "\n",
     "print(stockpricefull)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next steps:\n",
+    "\n",
+    "1. create functions to request a list of 100 stocks and get comprehensive data from alpha vantage\n",
+    "2. compare the data sources between AV and YF and merge info\n",
+    "3. decide how to incorporate the financials from each stock (meaning we get quarterly data for example for APPLE in the dataframe: `apple_quarterly_reports` ) this data has dimensions: 58x29 , therefore not sure how to incorporate it whith dataframe 15306 x 5\n"
    ]
   },
   {
