--- a/main.ipynb
+++ b/main.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,8 @@
     "import warnings\n",
     "import requests\n",
     "import json\n",
+    "import pandas_ta as ta\n",
+    "from ta import trend, volatility, momentum, volume\n",
     "\n",
     "\n",
     "from numpy import array\n",
@@ -5036,6 +5038,309 @@
     "    #stockpricefull.index.to_datetime\n",
     "\n",
     "print(stockpricefull)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FEATURE ENGINEERING\n",
+    "\n",
+    "\n",
+    "### TECHNICAL INDICATORS:\n",
+    "\n",
+    "* MACD (Moving Average Convergence Divergence)\n",
+    "* RSI (Relative Strength Index)\n",
+    "* Bollinger Bands High (the low is commented out)\n",
+    "* ADX (Average Directional Index)\n",
+    "* ATR (Average True Range)\n",
+    "* CCI (Commodity Channel Index)\n",
+    "* MFI (Money Flow Index)\n",
+    "* Stochastic Oscillator\n",
+    "* Keltner Channel\n",
+    "* VWAP (Volume Weighted Average Price)\n",
+    "* EOM (Ease Of Movement)\n",
+    "* VPT (Volume Price Trend)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Download daily OHLCV for APPLE stock\n",
+    "data_yf = yf.download('AAPL', start='2008-01-01', end='2024-04-25')\n",
+    "\n",
+    "# Preserve the original OHLCV data_yf\n",
+    "ohlcv_data_yf = data_yf.copy()\n",
+    "#(Open/High/Low/Close/Volume) data \n",
+    "\n",
+    "# 2. Clean data_yf: DROP NAs\n",
+    "data_yf.dropna(inplace=True)\n",
+    "\n",
+    "# 3. Add technical indicators\n",
+    "\n",
+    "data_yf['macd'] = trend.MACD(data_yf['Close']).macd()\n",
+    "data_yf['macd_signal'] = trend.MACD(data_yf['Close']).macd_signal()\n",
+    "data_yf['rsi'] = momentum.RSIIndicator(data_yf['Close']).rsi()\n",
+    "data_yf['bb_high'] = volatility.BollingerBands(data_yf['Close']).bollinger_hband()\n",
+    "#data_yf['bb_low'] = volatility.BollingerBands(data_yf['Close']).bollinger_lband()\n",
+    "data_yf['adx'] = trend.ADXIndicator(data_yf['High'], data_yf['Low'], data_yf['Close']).adx()\n",
+    "data_yf['atr'] = volatility.AverageTrueRange(data_yf['High'], data_yf['Low'], data_yf['Close']).average_true_range()\n",
+    "data_yf['cci'] = trend.CCIIndicator(data_yf['High'], data_yf['Low'], data_yf['Close']).cci()\n",
+    "data_yf['mfi'] = volume.MFIIndicator(data_yf['High'], data_yf['Low'], data_yf['Close'], data_yf['Volume']).money_flow_index()\n",
+    "data_yf['so'] = momentum.StochasticOscillator(data_yf['High'], data_yf['Low'], data_yf['Close']).stoch()\n",
+    "# Add additional indicators as needed...\n",
+    "# Calculate additional indicators\n",
+    "data_yf['kc'] = volatility.KeltnerChannel(data_yf['High'], data_yf['Low'], data_yf['Close']).keltner_channel_mband()\n",
+    "data_yf['vwap'] = volume.VolumeWeightedAveragePrice(data_yf['High'], data_yf['Low'], data_yf['Close'], data_yf['Volume']).volume_weighted_average_price()\n",
+    "data_yf['eom'] = volume.EaseOfMovementIndicator(data_yf['High'], data_yf['Low'], data_yf['Close'], data_yf['Volume']).ease_of_movement()\n",
+    "data_yf['vpt'] = volume.VolumePriceTrendIndicator(data_yf['Close'], data_yf['Volume']).volume_price_trend()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Momentum Indicators\n",
+    "data_yf.ta.rsi(append=True)\n",
+    "data_yf.ta.mfi(append=True)\n",
+    "data_yf.ta.roc(append=True)\n",
+    "data_yf.ta.willr(append=True)\n",
+    "\n",
+    "# Volume Indicators\n",
+    "data_yf.ta.obv(append=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Volatility Indicators\n",
+    "# pandas_ta doesn't seem to have NATR equivalent, but ATR is available\n",
+    "data_yf.ta.atr(append=True)\n",
+    "\n",
+    "\n",
+    "# 4. Create Buy/Sell signals based on the technical indicators\n",
+    "\n",
+    "# Either use the indicator values directly or create signals based on the indicator values\n",
+    "# depending on the strategy, we can create signals for each indicator!!\n",
+    "# these signals are used to create a trading strategy and are very subjective; they might not even be useful\n",
+    "# we can get rid of them.\n",
+    "\n",
+    "# SIGNALS for each indicator\n",
+    "# Calculate the Force Index (FI)\n",
+    "data_yf['fi'] = (data_yf['Close'].diff()) * data_yf['Volume']\n",
+    "\n",
+    "# Create a Buy/Sell/Hold Signal for FI\n",
+    "data_yf['fi_buy_signal'] = np.where(data_yf['fi'] > 0, 1, 0)  # Buy if FI is positive\n",
+    "data_yf['fi_sell_signal'] = np.where(data_yf['fi'] < 0, 1, 0)  # Sell if FI is negative\n",
+    "\n",
+    "# MACD signal\n",
+    "data_yf['macd_buy_signal'] = np.where(data_yf['macd'] > 0, 1, 0)\n",
+    "data_yf['macd_sell_signal'] = np.where(data_yf['macd'] < 0, 1, 0)\n",
+    "\n",
+    "# RSI signal\n",
+    "data_yf['rsi_buy_signal'] = np.where(data_yf['rsi'] < 30, 1, 0)\n",
+    "data_yf['rsi_sell_signal'] = np.where(data_yf['rsi'] > 70, 1, 0)\n",
+    "\n",
+    "# Stochastic Oscillator signal\n",
+    "data_yf['so_buy_signal'] = np.where(data_yf['so'] < 20, 1, 0)\n",
+    "data_yf['so_sell_signal'] = np.where(data_yf['so'] > 80, 1, 0)\n",
+    "\n",
+    "# CCI signal\n",
+    "data_yf['cci_buy_signal'] = np.where(data_yf['cci'] < -100, 1, 0)\n",
+    "data_yf['cci_sell_signal'] = np.where(data_yf['cci'] > 100, 1, 0)\n",
+    "\n",
+    "# MFI signal\n",
+    "data_yf['mfi_buy_signal'] = np.where(data_yf['mfi'] < 20, 1, 0)\n",
+    "data_yf['mfi_sell_signal'] = np.where(data_yf['mfi'] > 80, 1, 0)\n",
+    "\n",
+    "# WILLR signal\n",
+    "data_yf['WILLR_buy_signal'] = np.where(data_yf['WILLR_14'] < -80, 1, 0)\n",
+    "data_yf['WILLR_sell_signal'] = np.where(data_yf['WILLR_14'] > -20, 1, 0)\n",
+    "\n",
+    "\n",
+    "# Other indicators such as ATR, EOM, VWAP, etc., may not have clear buy/sell interpretations.\n",
+    "# Depending on strategy: might want to create signals for these as well.\n",
+    "\n",
+    "# If suing signals, drop the original indicator columns\n",
+    "# if not using signals, keep the original indicator columns\n",
+    "\n",
+    "# Drop the original technical indicator columns, keeping only the signal columns\n",
+    "indicator_cols_to_drop = [\n",
+    "    'macd', 'macd_signal', 'rsi', 'bb_high', 'adx', 'atr', 'cci', 'mfi', 'so', 'kc', 'fi', 'vwap', 'eom', 'vpt',\n",
+    "    'WILLR_14', 'OBV' # pandas_ta indicators\n",
+    "]\n",
+    "data_yf.drop(columns=indicator_cols_to_drop, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Open', 'High', 'Low', 'Close', 'Adj Close', 'Volume', 'RSI_14',\n",
+       "       'MFI_14', 'ROC_10', 'ATRr_14', 'fi_buy_signal', 'fi_sell_signal',\n",
+       "       'macd_buy_signal', 'macd_sell_signal', 'rsi_buy_signal',\n",
+       "       'rsi_sell_signal', 'so_buy_signal', 'so_sell_signal', 'cci_buy_signal',\n",
+       "       'cci_sell_signal', 'mfi_buy_signal', 'mfi_sell_signal',\n",
+       "       'WILLR_buy_signal', 'WILLR_sell_signal'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_yf.columns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### MOVING AVERAGES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create lagged features for each indicator for the previous 5 days\n",
+    "indicator_cols = [col for col in data_yf.columns if col not in ['win', 'gain_loss_pct', 'Open', 'High', 'Low', 'Close', 'Volume','Adj Close']]\n",
+    "\n",
+    "for col in indicator_cols:\n",
+    "    for i in range(1, 6):\n",
+    "        data_yf[f'{col}_lag_{i}'] = data_yf[col].shift(i)\n",
+    "\n",
+    "# Remove rows with NaN values after shifting\n",
+    "data_yf.dropna(inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Calculate gain/loss percentage and assign -1, 0, 1\n",
+    "data_yf['gain_loss_pct'] = (data_yf['Close'] - data_yf['Open']) / data_yf['Open']\n",
+    "data_yf['win'] = np.where(data_yf['gain_loss_pct'] > 0.005, 1, np.where(data_yf['gain_loss_pct'] < -0.0025, 0, 0))\n",
+    "\n",
+    "# Drop OHLCV columns\n",
+    "data_yf.drop(columns=['Open', 'High', 'Low', 'Close', 'Volume', 'Adj Close'], inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((4087, 110),\n",
+       " Index(['RSI_14', 'MFI_14', 'ROC_10', 'ATRr_14', 'fi_buy_signal',\n",
+       "        'fi_sell_signal', 'macd_buy_signal', 'macd_sell_signal',\n",
+       "        'rsi_buy_signal', 'rsi_sell_signal',\n",
+       "        ...\n",
+       "        'WILLR_buy_signal_lag_3', 'WILLR_buy_signal_lag_4',\n",
+       "        'WILLR_buy_signal_lag_5', 'WILLR_sell_signal_lag_1',\n",
+       "        'WILLR_sell_signal_lag_2', 'WILLR_sell_signal_lag_3',\n",
+       "        'WILLR_sell_signal_lag_4', 'WILLR_sell_signal_lag_5', 'gain_loss_pct',\n",
+       "        'win'],\n",
+       "       dtype='object', length=110),\n",
+       "             RSI_14       MFI_14       ROC_10      ATRr_14  fi_buy_signal  \\\n",
+       " count  4087.000000  4087.000000  4087.000000  4087.000000    4087.000000   \n",
+       " mean     54.996555    53.539006     1.030595     1.280554       0.525569   \n",
+       " std      13.171973    16.657557     5.901597     1.426687       0.499407   \n",
+       " min      16.550367     0.000000   -32.737052     0.108588       0.000000   \n",
+       " 25%      45.075708    41.291604    -2.478150     0.330033       0.000000   \n",
+       " 50%      54.933892    54.044352     1.270067     0.564182       1.000000   \n",
+       " 75%      64.763441    66.048092     4.792104     2.170223       1.000000   \n",
+       " max      90.402160    95.233562    29.539177     5.984262       1.000000   \n",
+       " \n",
+       "        fi_sell_signal  macd_buy_signal  macd_sell_signal  rsi_buy_signal  \\\n",
+       " count     4087.000000      4087.000000       4087.000000     4087.000000   \n",
+       " mean         0.472718         0.640323          0.358209        0.026181   \n",
+       " std          0.499316         0.479964          0.479533        0.159692   \n",
+       " min          0.000000         0.000000          0.000000        0.000000   \n",
+       " 25%          0.000000         0.000000          0.000000        0.000000   \n",
+       " 50%          0.000000         1.000000          0.000000        0.000000   \n",
+       " 75%          1.000000         1.000000          1.000000        0.000000   \n",
+       " max          1.000000         1.000000          1.000000        1.000000   \n",
+       " \n",
+       "        rsi_sell_signal  ...  WILLR_buy_signal_lag_3  WILLR_buy_signal_lag_4  \\\n",
+       " count      4087.000000  ...             4087.000000             4087.000000   \n",
+       " mean          0.139222  ...                0.155371                0.155371   \n",
+       " std           0.346220  ...                0.362302                0.362302   \n",
+       " min           0.000000  ...                0.000000                0.000000   \n",
+       " 25%           0.000000  ...                0.000000                0.000000   \n",
+       " 50%           0.000000  ...                0.000000                0.000000   \n",
+       " 75%           0.000000  ...                0.000000                0.000000   \n",
+       " max           1.000000  ...                1.000000                1.000000   \n",
+       " \n",
+       "        WILLR_buy_signal_lag_5  WILLR_sell_signal_lag_1  \\\n",
+       " count             4087.000000              4087.000000   \n",
+       " mean                 0.155371                 0.353560   \n",
+       " std                  0.362302                 0.478133   \n",
+       " min                  0.000000                 0.000000   \n",
+       " 25%                  0.000000                 0.000000   \n",
+       " 50%                  0.000000                 0.000000   \n",
+       " 75%                  0.000000                 1.000000   \n",
+       " max                  1.000000                 1.000000   \n",
+       " \n",
+       "        WILLR_sell_signal_lag_2  WILLR_sell_signal_lag_3  \\\n",
+       " count              4087.000000              4087.000000   \n",
+       " mean                  0.353560                 0.353560   \n",
+       " std                   0.478133                 0.478133   \n",
+       " min                   0.000000                 0.000000   \n",
+       " 25%                   0.000000                 0.000000   \n",
+       " 50%                   0.000000                 0.000000   \n",
+       " 75%                   1.000000                 1.000000   \n",
+       " max                   1.000000                 1.000000   \n",
+       " \n",
+       "        WILLR_sell_signal_lag_4  WILLR_sell_signal_lag_5  gain_loss_pct  \\\n",
+       " count              4087.000000              4087.000000    4087.000000   \n",
+       " mean                  0.353560                 0.353560       0.000404   \n",
+       " std                   0.478133                 0.478133       0.015707   \n",
+       " min                   0.000000                 0.000000      -0.120047   \n",
+       " 25%                   0.000000                 0.000000      -0.007618   \n",
+       " 50%                   0.000000                 0.000000       0.000639   \n",
+       " 75%                   1.000000                 1.000000       0.008931   \n",
+       " max                   1.000000                 1.000000       0.129522   \n",
+       " \n",
+       "                win  \n",
+       " count  4087.000000  \n",
+       " mean      0.354049  \n",
+       " std       0.478283  \n",
+       " min       0.000000  \n",
+       " 25%       0.000000  \n",
+       " 50%       0.000000  \n",
+       " 75%       1.000000  \n",
+       " max       1.000000  \n",
+       " \n",
+       " [8 rows x 110 columns])"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_yf.shape, data_yf.columns, data_yf.describe()"
    ]
   },
   {
