--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BEFORE YOU START: READ THIS\n",
+    "\n",
+    "1. install required packages\n",
+    "2. get your API key from alpha vantage\n",
+    "3. run each cell through CHAT GPT or search in Google to see what eat term means\n",
+    "4. right now, all i have done is download APPLE data and do feature engineering on it.\n",
+    "\n",
+    "# NEXT STEPS:\n",
+    "5. Need to create functions to do the feature engineering on 100 stocks for example\n",
+    "6. Need to create the model to identify 10 stocks to hold and identify buy/sell triggers\n",
+    "7. Need to find NEWS API to include in the model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -5350,7 +5367,7 @@
     "Next steps:\n",
     "\n",
     "1. create functions to request a list of 100 stocks and get comprehensive data from alpha vantage\n",
-    "2. compare the data sources between AV and YF and merge info\n",
+    "2. compare the data sources between AV and YF and decide what info to merge\n",
     "3. decide how to incorporate the financials from each stock (meaning we get quarterly data for example for APPLE in the dataframe: `apple_quarterly_reports` ) this data has dimensions: 58x29 , therefore not sure how to incorporate it whith dataframe 15306 x 5\n"
    ]
   },
