--- a/main.ipynb
+++ b/main.ipynb
@@ -5082,7 +5082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -5138,8 +5138,14 @@
     "\n",
     "# Volatility Indicators\n",
     "# pandas_ta doesn't seem to have NATR equivalent, but ATR is available\n",
-    "data_yf.ta.atr(append=True)\n",
     "\n",
+    "# Average True Range (ATR)\n",
+    "# ATR is a technical analysis indicator that measures market volatility by decomposing the entire range of an asset price for that period.\n",
+    "# It is commonly used to understand the volatility of a stock, commodity, forex, or crypto over a given period.\n",
+    "# The ATR is particularly useful in systems that need to place actual numerical values to the volatility or potential price change of an asset, often used to adjust trading systems and stop-loss orders.\n",
+    "\n",
+    "# Calculate ATR and add it to the DataFrame\n",
+    "data_yf['atr'] = data_yf.ta.atr()\n",
     "\n",
     "# 4. Create Buy/Sell signals based on the technical indicators\n",
     "\n",
@@ -5197,14 +5203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['Open', 'High', 'Low', 'Close', 'Adj Close', 'Volume', 'RSI_14',\n",
-       "       'MFI_14', 'ROC_10', 'ATRr_14', 'fi_buy_signal', 'fi_sell_signal',\n",
+       "       'MFI_14', 'ROC_10', 'fi_buy_signal', 'fi_sell_signal',\n",
        "       'macd_buy_signal', 'macd_sell_signal', 'rsi_buy_signal',\n",
        "       'rsi_sell_signal', 'so_buy_signal', 'so_sell_signal', 'cci_buy_signal',\n",
        "       'cci_sell_signal', 'mfi_buy_signal', 'mfi_sell_signal',\n",
@@ -5212,7 +5218,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5230,7 +5236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5247,7 +5253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5261,52 +5267,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((4087, 110),\n",
-       " Index(['RSI_14', 'MFI_14', 'ROC_10', 'ATRr_14', 'fi_buy_signal',\n",
-       "        'fi_sell_signal', 'macd_buy_signal', 'macd_sell_signal',\n",
-       "        'rsi_buy_signal', 'rsi_sell_signal',\n",
+       "((4087, 104),\n",
+       " Index(['RSI_14', 'MFI_14', 'ROC_10', 'fi_buy_signal', 'fi_sell_signal',\n",
+       "        'macd_buy_signal', 'macd_sell_signal', 'rsi_buy_signal',\n",
+       "        'rsi_sell_signal', 'so_buy_signal',\n",
        "        ...\n",
        "        'WILLR_buy_signal_lag_3', 'WILLR_buy_signal_lag_4',\n",
        "        'WILLR_buy_signal_lag_5', 'WILLR_sell_signal_lag_1',\n",
        "        'WILLR_sell_signal_lag_2', 'WILLR_sell_signal_lag_3',\n",
        "        'WILLR_sell_signal_lag_4', 'WILLR_sell_signal_lag_5', 'gain_loss_pct',\n",
        "        'win'],\n",
-       "       dtype='object', length=110),\n",
-       "             RSI_14       MFI_14       ROC_10      ATRr_14  fi_buy_signal  \\\n",
-       " count  4087.000000  4087.000000  4087.000000  4087.000000    4087.000000   \n",
-       " mean     54.996555    53.539006     1.030595     1.280554       0.525569   \n",
-       " std      13.171973    16.657557     5.901597     1.426687       0.499407   \n",
-       " min      16.550367     0.000000   -32.737052     0.108588       0.000000   \n",
-       " 25%      45.075708    41.291604    -2.478150     0.330033       0.000000   \n",
-       " 50%      54.933892    54.044352     1.270067     0.564182       1.000000   \n",
-       " 75%      64.763441    66.048092     4.792104     2.170223       1.000000   \n",
-       " max      90.402160    95.233562    29.539177     5.984262       1.000000   \n",
+       "       dtype='object', length=104),\n",
+       "             RSI_14       MFI_14       ROC_10  fi_buy_signal  fi_sell_signal  \\\n",
+       " count  4087.000000  4087.000000  4087.000000    4087.000000     4087.000000   \n",
+       " mean     54.996555    53.539006     1.030595       0.525569        0.472718   \n",
+       " std      13.171973    16.657557     5.901597       0.499407        0.499316   \n",
+       " min      16.550367     0.000000   -32.737052       0.000000        0.000000   \n",
+       " 25%      45.075708    41.291604    -2.478150       0.000000        0.000000   \n",
+       " 50%      54.933892    54.044352     1.270067       1.000000        0.000000   \n",
+       " 75%      64.763441    66.048092     4.792104       1.000000        1.000000   \n",
+       " max      90.402160    95.233562    29.539177       1.000000        1.000000   \n",
        " \n",
-       "        fi_sell_signal  macd_buy_signal  macd_sell_signal  rsi_buy_signal  \\\n",
-       " count     4087.000000      4087.000000       4087.000000     4087.000000   \n",
-       " mean         0.472718         0.640323          0.358209        0.026181   \n",
-       " std          0.499316         0.479964          0.479533        0.159692   \n",
-       " min          0.000000         0.000000          0.000000        0.000000   \n",
-       " 25%          0.000000         0.000000          0.000000        0.000000   \n",
-       " 50%          0.000000         1.000000          0.000000        0.000000   \n",
-       " 75%          1.000000         1.000000          1.000000        0.000000   \n",
-       " max          1.000000         1.000000          1.000000        1.000000   \n",
+       "        macd_buy_signal  macd_sell_signal  rsi_buy_signal  rsi_sell_signal  \\\n",
+       " count      4087.000000       4087.000000     4087.000000      4087.000000   \n",
+       " mean          0.640323          0.358209        0.026181         0.139222   \n",
+       " std           0.479964          0.479533        0.159692         0.346220   \n",
+       " min           0.000000          0.000000        0.000000         0.000000   \n",
+       " 25%           0.000000          0.000000        0.000000         0.000000   \n",
+       " 50%           1.000000          0.000000        0.000000         0.000000   \n",
+       " 75%           1.000000          1.000000        0.000000         0.000000   \n",
+       " max           1.000000          1.000000        1.000000         1.000000   \n",
        " \n",
-       "        rsi_sell_signal  ...  WILLR_buy_signal_lag_3  WILLR_buy_signal_lag_4  \\\n",
-       " count      4087.000000  ...             4087.000000             4087.000000   \n",
-       " mean          0.139222  ...                0.155371                0.155371   \n",
-       " std           0.346220  ...                0.362302                0.362302   \n",
-       " min           0.000000  ...                0.000000                0.000000   \n",
-       " 25%           0.000000  ...                0.000000                0.000000   \n",
-       " 50%           0.000000  ...                0.000000                0.000000   \n",
-       " 75%           0.000000  ...                0.000000                0.000000   \n",
-       " max           1.000000  ...                1.000000                1.000000   \n",
+       "        so_buy_signal  ...  WILLR_buy_signal_lag_3  WILLR_buy_signal_lag_4  \\\n",
+       " count    4087.000000  ...             4087.000000             4087.000000   \n",
+       " mean        0.155126  ...                0.155371                0.155371   \n",
+       " std         0.362069  ...                0.362302                0.362302   \n",
+       " min         0.000000  ...                0.000000                0.000000   \n",
+       " 25%         0.000000  ...                0.000000                0.000000   \n",
+       " 50%         0.000000  ...                0.000000                0.000000   \n",
+       " 75%         0.000000  ...                0.000000                0.000000   \n",
+       " max         1.000000  ...                1.000000                1.000000   \n",
        " \n",
        "        WILLR_buy_signal_lag_5  WILLR_sell_signal_lag_1  \\\n",
        " count             4087.000000              4087.000000   \n",
@@ -5348,10 +5354,10 @@
        " 75%       1.000000  \n",
        " max       1.000000  \n",
        " \n",
-       " [8 rows x 110 columns])"
+       " [8 rows x 104 columns])"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
