added in structure for LSTM and the optmodel on it, still trying to figure out the extra parameters

--- a/main.ipynb
+++ b/main.ipynb
@@ -5382,7 +5382,154 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install pypeo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "from torch import nn\n",
+    "import torch \n",
+    "class StockLSTM(nn.Module):\n",
+    "\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, num_layers=1):\n",
+    "        super(StockLSTM, self).__init__()\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim,num_layers=num_layers, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_dim, vocab_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.embedding(x)\n",
+    "        all_h, (h, c) = self.lstm(x)\n",
+    "        out = self.fc(all_h) # Apply Linear layer to outputs from all the hidden state.\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "# train model\n",
+    "def trainModel(reg, loss_func, method_name, num_epochs=20, lr=1e-2):\n",
+    "    # set adam optimizer\n",
+    "    optimizer = torch.optim.Adam(reg.parameters(), lr=lr)\n",
+    "    # train mode\n",
+    "    reg.train()\n",
+    "    # init log\n",
+    "    train_loss_log = []\n",
+    "    loss_log_regret = [pyepo.metric.regret(reg, optmodel, loader_test)]\n",
+    "    # init elpased time\n",
+    "    elapsed = 0\n",
+    "    for epoch in range(num_epochs):\n",
+    "        # start timing\n",
+    "        tick = time.time()\n",
+    "        # load data\n",
+    "        train_loss = 0\n",
+    "        for i, data in enumerate(loader_train):\n",
+    "            x, c, w, z = data\n",
+    "            # cuda\n",
+    "            if torch.cuda.is_available():\n",
+    "                x, c, w, z = x.cuda(), c.cuda(), w.cuda(), z.cuda()\n",
+    "            # forward pass\n",
+    "            cp = reg(x)\n",
+    "            if method_name == \"spo+\":\n",
+    "                loss = loss_func(cp, c, w, z)\n",
+    "            elif method_name == \"mse\":\n",
+    "                loss = loss_func(cp, c)\n",
+    "            else:\n",
+    "                raise ValueError(\"Method name {} not supported\".format(method_name))\n",
+    "            # backward pass\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            # record time\n",
+    "            tock = time.time()\n",
+    "            elapsed += tock - tick\n",
+    "            train_loss += loss.item()\n",
+    "        train_loss /= len(loader_train)\n",
+    "        train_loss_log.append(train_loss)\n",
+    "        regret = pyepo.metric.regret(reg, optmodel, loader_test)\n",
+    "        loss_log_regret.append(regret)\n",
+    "        print(\"Epoch {:2},  Loss: {:9.4f},  Regret: {:7.4f}%\".format(epoch+1, train_loss, regret*100))\n",
+    "    print(\"Total Elapsed Time: {:.2f} Sec.\".format(elapsed))\n",
+    "    return train_loss_log, loss_log_regret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gurobipy as gp\n",
+    "from gurobipy import GRB\n",
+    "import numpy as np\n",
+    "import pyepo\n",
+    "from pyepo.model.grb import optGrbModel\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "class myModel(optGrbModel):\n",
+    "    def __init__(self, weights):\n",
+    "        self.weights = np.array(weights)\n",
+    "        self.num_item = len(weights[0])\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def _getModel(self):\n",
+    "        # ceate a model\n",
+    "        m = gp.Model()\n",
+    "        # varibles\n",
+    "        x = m.addVars(self.num_item, name=\"x\", vtype=GRB.BINARY)\n",
+    "        # model sense\n",
+    "        m.modelSense = GRB.MAXIMIZE\n",
+    "        # constraints\n",
+    "        m.addConstr(gp.quicksum([self.weights[0,i] * x[i] for i in range(self.num_item)]) <= 7)\n",
+    "        m.addConstr(gp.quicksum([self.weights[1,i] * x[i] for i in range(self.num_item)]) <= 8)\n",
+    "        m.addConstr(gp.quicksum([self.weights[2,i] * x[i] for i in range(self.num_item)]) <= 9)\n",
+    "        return m, x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "spop = pyepo.func.SPOPlus(optmodel, processes=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hyperparameters\n",
+    "VOCAB_SIZE = #fill in once data is imported\n",
+    "EMBEDDING_DIM = #param we can optimize\n",
+    "HIDDEN_DIM = #also a param to optimize\n",
+    "learning_rate = #another optimizable param\n",
+    "epoch = #optimize\n",
+    "num_layers = #optimize\n",
+    "epochs = 20\n",
+    "learning_rate = 2e-3\n",
+    "method_name = \"spo+\"\n",
+    "\n",
+    "# Instantiate the model\n",
+    "lstm = StockLSTM(VOCAB_SIZE, EMBEDDING_DIM, HIDDEN_DIM,num_layers=num_layers)\n",
+    "loss_log_lstm_spo, loss_log_regret_lstm_spo = trainModel(lstm, loss_func=spop, method_name=method_name)\n"
+   ]
   }
  ],
  "metadata": {
