added optmodel to be portfolio optimization instead of random

--- a/main.ipynb
+++ b/main.ipynb
@@ -5383,6 +5383,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Need a train loader and a test loader\n",
+    "#Need to convert to optDataset, then wrap with DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!pip install pypeo"
    ]
   },
@@ -5416,7 +5426,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import gurobipy as gp\n",
+    "from gurobipy import GRB\n",
+    "import numpy as np\n",
+    "import pyepo\n",
+    "from pyepo.model.grb import optGrbModel\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "m = 50 # change based on number of assets\n",
+    "cov = np.cov(np.random.randn(10, m), rowvar=False) # covariance matrix\n",
+    "optmodel = pyepo.model.grb.portfolioModel(m, cov) # build model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import time\n",
+    "import pyepo\n",
+    "\n",
     "\n",
     "# train model\n",
     "def trainModel(reg, loss_func, method_name, num_epochs=20, lr=1e-2):\n",
@@ -5462,41 +5494,6 @@
     "        print(\"Epoch {:2},  Loss: {:9.4f},  Regret: {:7.4f}%\".format(epoch+1, train_loss, regret*100))\n",
     "    print(\"Total Elapsed Time: {:.2f} Sec.\".format(elapsed))\n",
     "    return train_loss_log, loss_log_regret"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gurobipy as gp\n",
-    "from gurobipy import GRB\n",
-    "import numpy as np\n",
-    "import pyepo\n",
-    "from pyepo.model.grb import optGrbModel\n",
-    "import torch\n",
-    "from torch import nn\n",
-    "from torch.utils.data import DataLoader\n",
-    "\n",
-    "class myModel(optGrbModel):\n",
-    "    def __init__(self, weights):\n",
-    "        self.weights = np.array(weights)\n",
-    "        self.num_item = len(weights[0])\n",
-    "        super().__init__()\n",
-    "\n",
-    "    def _getModel(self):\n",
-    "        # ceate a model\n",
-    "        m = gp.Model()\n",
-    "        # varibles\n",
-    "        x = m.addVars(self.num_item, name=\"x\", vtype=GRB.BINARY)\n",
-    "        # model sense\n",
-    "        m.modelSense = GRB.MAXIMIZE\n",
-    "        # constraints\n",
-    "        m.addConstr(gp.quicksum([self.weights[0,i] * x[i] for i in range(self.num_item)]) <= 7)\n",
-    "        m.addConstr(gp.quicksum([self.weights[1,i] * x[i] for i in range(self.num_item)]) <= 8)\n",
-    "        m.addConstr(gp.quicksum([self.weights[2,i] * x[i] for i in range(self.num_item)]) <= 9)\n",
-    "        return m, x"
    ]
   },
   {
