--- a/main.ipynb
+++ b/main.ipynb
@@ -368,7 +368,10 @@
    "outputs": [],
    "source": [
     "#get ticker symbols\n",
-    "ticker_symbols = tickers['Symbol'].tolist()"
+    "ticker_symbols = tickers['Symbol'].tolist()\n",
+    "num_rows = len(tickers)\n",
+    "print(\"Number of rows in the DataFrame:\", num_rows)\n",
+    "tickers.tail(10)"
    ]
   },
   {
@@ -18388,6 +18391,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a LSTM-based model for stock prediction tasks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -18492,6 +18502,13 @@
     "        print(\"Epoch {:2},  Loss: {:9.4f},  Regret: {:7.4f}%\".format(epoch+1, train_loss, regret*100))\n",
     "    print(\"Total Elapsed Time: {:.2f} Sec.\".format(elapsed))\n",
     "    return train_loss_log, loss_log_regret"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a Predict-then-Optimize Model"
    ]
   },
   {
