scale first, before transposing based on ticker

--- a/data.ipynb
+++ b/data.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9283,6 +9283,70 @@
     "# create csv with features data\n",
     "data_yf.to_csv('data/all_stock_data.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_yf = pd.read_csv('data/all_stock_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "float_columns = data_yf.select_dtypes(include=['float64']).columns\n",
+    "\n",
+    "# Initialize the StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Standardize only the float columns\n",
+    "data_yf[float_columns] = scaler.fit_transform(data_yf[float_columns])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date             0\n",
+       "Open             0\n",
+       "High             0\n",
+       "Low              0\n",
+       "Close            0\n",
+       "                ..\n",
+       "OBV_lag_3        0\n",
+       "OBV_lag_4        0\n",
+       "OBV_lag_5        0\n",
+       "gain_loss_pct    0\n",
+       "win              0\n",
+       "Length: 128, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_yf.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
