added all data into model

--- a/data.ipynb
+++ b/data.ipynb
@@ -9343,10 +9343,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create csv with features data\n",
+    "data_yf.to_csv('data/all_stock_data.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
