adding lstm model to another notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -1150,13 +1150,22 @@
        "[5 rows x 46051 columns]"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_yf.to_csv('data/all_stock_data_transformed_horizontally.csv')"
    ]
   },
   {
@@ -1232,7 +1241,7 @@
     "    return model\n",
     "\n",
     "# Portfolio optimization function with variance consideration and risk aversion\n",
-    "def optimize_portfolio(weights, model, features, historical_returns, risk_aversion=0.5):\n",
+    "def optimize_portfolio(weights, model, features, historical_returns, risk_aversion=0.8):\n",
     "    weights = weights / np.sum(weights)  # Normalize weights\n",
     "    pred_returns = model.predict(np.array([features.iloc[-1]]))[0]\n",
     "    expected_return = np.dot(weights, pred_returns)\n",
@@ -6119,11 +6128,11 @@
     "\n",
     "with tf.device(device_name):\n",
     "    # Optimizing the portfolio on training data\n",
-    "    train_optimized_result = minimize(optimize_portfolio, initial_weights, args=(model, train_features, train_targets, 0.999999), bounds=bounds, constraints=constraints)\n",
+    "    train_optimized_result = minimize(optimize_portfolio, initial_weights, args=(model, train_features, train_targets, 1), bounds=bounds, constraints=constraints)\n",
     "    optimized_weights_train = train_optimized_result.x\n",
     "\n",
     "    # Optimizing the portfolio on testing data\n",
-    "    test_optimized_result = minimize(optimize_portfolio, initial_weights, args=(model, test_features, test_targets, 0.999999), bounds=bounds, constraints=constraints)\n",
+    "    test_optimized_result = minimize(optimize_portfolio, initial_weights, args=(model, test_features, test_targets, 1), bounds=bounds, constraints=constraints)\n",
     "    optimized_weights_test = test_optimized_result.x\n",
     "\n",
     "    # Calculating ROI\n",
